# YourFreeDownloader

./: .gitignore  .pre-commit-config.yaml  .reorganization-notes.md  ARCHITECTURE.md  CONTRIBUTING.md  FIX_TK_ERROR.md  QUICK_START.md  README.md  REORGANIZATION_GUIDE.md  config.json  settings.gradle.kts  start.sh
.github/workflows/: ci-cd.yml
YourFreeDownloader-Windows/: YouTubeDownloader.spec  config.json  yt-downlader.py
YourFreeDownloader-Windows/YouTubeDownloader_Data/: config.json
app/src/androidTest/java/com/hanserlod/youfreedownlader/: ExampleInstrumentedTest.kt
app/src/main/python/: hanserlod.py
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/hanserlod/youfreedownlader/: ExampleUnitTest.kt
desktop-multiplatform/: INSTALL.sh  README.md  TROUBLESHOOTING_LINUX.md  pyproject.toml  requirements.txt
desktop-multiplatform/docs/: BUILD.md  INSTRUCCIONES_COMPILACION.md  INSTRUCCIONES_FFMPEG.md  LEEME.txt  README_COMPILACION.md
desktop-multiplatform/scripts/: build-linux.sh  build-windows.bat  compilar-rapido.bat  compilar.bat  run-linux.sh  run-windows.bat
desktop-multiplatform/src/: yt-downlader.py
desktop-multiplatform/src/ytdlp_desktop/: __main__.py
desktop-multiplatform/src/ytdlp_desktop/config/: config_store.py  manager.py
desktop-multiplatform/src/ytdlp_desktop/data/: services.py
desktop-multiplatform/src/ytdlp_desktop/di/: container.py
desktop-multiplatform/src/ytdlp_desktop/domain/: models.py
desktop-multiplatform/src/ytdlp_desktop/platform/: desktop_platform.py
desktop-multiplatform/src/ytdlp_desktop/ui/: main_window.py
desktop-multiplatform/src/ytdlp_desktop/utils/: logger.py
mobile-android/: README.md  build.gradle.kts  proguard-rules.pro  settings.gradle.kts
mobile-android/app/: build.gradle.kts
mobile-android/gradle/: libs.versions.toml
mobile-android/gradle/wrapper/: gradle-wrapper.properties
mobile-android/src/main/: AndroidManifest.xml
mobile-android/src/main/java/com/hanserlod/youfreedownlader/: MainActivity.kt  YourFreeDownloaderApplication.kt
mobile-android/src/main/java/com/hanserlod/youfreedownlader/domain/model/: DownloadModels.kt
mobile-android/src/main/java/com/hanserlod/youfreedownlader/ui/screen/: DownloadScreen.kt
mobile-android/src/main/java/com/hanserlod/youfreedownlader/ui/theme/: Theme.kt  Type.kt
mobile-android/src/main/java/com/hanserlod/youfreedownlader/ui/viewmodel/: DownloadViewModel.kt
mobile-android/src/main/python/: hanserlod.py
mobile-android/src/main/res/values/: strings.xml  themes.xml
mobile-android/src/main/res/values-night/: themes.xml
shared/: pyproject.toml
shared/ytdlp_core/: __init__.py
shared/ytdlp_core/application/: __init__.py  use_cases.py
shared/ytdlp_core/core/: __init__.py  models.py
shared/ytdlp_core/domain/: __init__.py  exceptions.py  ports.py
shared/ytdlp_core/infrastructure/: __init__.py  downloader.py  extractor.py  ffmpeg_service.py  platform.py  yt_dlp_impl.py
