[project]
name = "ytdlp-desktop"
version = "2.0.0"
description = "YouTube Downloader Desktop App"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "HanserlodXP"}]
requires-python = ">=3.8"
dependencies = [
    "customtkinter>=5.2.0",
    "ytdlp-core>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-qt>=4.2.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "pyinstaller>=6.0.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ytdlp_desktop*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "I", "W", "UP", "B", "C4", "ARG", "SIM", "T20", "PIE"]
ignore = ["E501"]
fixable = ["E", "F", "I", "W", "UP", "B", "C4", "ARG", "SIM", "T20", "PIE"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
ignore_missing_imports = true